--- a/src/main/resources/assets/gregtech_addon/lang/en_US.lang
+++ b/src/main/resources/assets/gregtech_addon/lang/en_US.lang
@@ -4,7 +4,7 @@ tile.BlockMetaID_Block.Iridium_reinforced_Stone.name=Iridium Reinforced Stone
 tile.BlockMetaID_Block.Block_of_Silver.name=Block of Silver
 tile.BlockMetaID_Block.Block_of_Ruby.name=Block of Ruby
 tile.BlockMetaID_Block.Block_of_Sapphire.name=Block of Sapphire
-tile.BlockMetaID_Block.LESU_Block.name=LESU-Block
+tile.BlockMetaID_Block.LESU_Block.name=LESU Block
 tile.BlockMetaID_Block.Block_of_Aluminium.name=Block of Aluminium
 tile.BlockMetaID_Block.Block_of_Titanium.name=Block of Titanium
 tile.BlockMetaID_Block.Block_of_Chrome.name=Block of Chrome
@@ -100,7 +100,7 @@ metatileentity.GT_Adv_Buffer.tooltip=A Buffer, which lets you specify the target
 metatileentity.GT_RockBreaker.name=Electric Rock Breaker
 metatileentity.GT_RockBreaker.tooltip=Electric Cobble Generator Mk VI
 metatileentity.GT_E_Sorter.name=Electric Sorter
-metatileentity.GT_E_Sorter.tooltip=The Sorter will put matching Items into the Blue Side.
+metatileentity.GT_E_Sorter.tooltip=The Sorter will put matching Items into the §9Blue Side§r.
 metatileentity.GT_E_ItemClearer.name=Electric Item Clearer
 metatileentity.GT_E_ItemClearer.tooltip=Clears out a 3x3x3 in front of it
 metatileentity.GT_Electrolyzer.name=Industrial Electrolyzer
@@ -780,7 +780,7 @@ item.GregTech_MetaGenerated_Item_01.hull_battery_mv.tooltip=An empty MV Battery 
 item.GregTech_MetaGenerated_Item_01.battery_lv_acid.name=Acid Battery
 item.GregTech_MetaGenerated_Item_01.battery_lv_mercury.name=Mercury Battery
 item.GregTech_MetaGenerated_Item_01.battery_lv_lithium.name=Lithium Battery
-item.GregTech_MetaGenerated_Item_01.battery_lv_sodium.name=Large Sodium Battery
+item.GregTech_MetaGenerated_Item_01.battery_lv_sodium.name=Sodium Battery
 item.GregTech_MetaGenerated_Item_01.battery_mv_acid.name=Large Acid Battery
 item.GregTech_MetaGenerated_Item_01.battery_mv_mercury.name=Large Mercury Battery
 item.GregTech_MetaGenerated_Item_01.battery_mv_lithium.name=Large Lithium Battery
@@ -1001,7 +1001,7 @@ item.bug.tooltip=Doesn't work as intended, this is a Bug
 item.tool.discharged.tooltip=Empty. You need to recharge it.
 item.empty=Empty. You should recycle it properly.
 item.generated.tooltip=Generated Item
-item.non_consumable.tooltip=§oWill not consume in process
+item.non_consumable.tooltip=§oIt won't be consumed on use
 item.chanced.tooltip=Chance: %s%%
 item.durability.tooltip=Durability: %d / %d
 item.GT_SensorCard_Item.tooltip=Insert into Display Panel
@@ -1078,6 +1078,8 @@ sensor.nodata=No data
 nei.alloy_smelter.title=Alloy Smelter
 nei.assembler.title=Assembling Machine
 nei.bender.title=Plate Bending Machine
+nei.bender.info.1= 
+nei.bender.info.2= 
 nei.blast_furnance.title=Industrial Blast Furnace
 nei.bronze_blast_furnance.title=Bronze Blast Furnace
 nei.blast_furnance.info=Heat Capacity: %sK
@@ -1109,8 +1111,8 @@ nei.extras.eu_total=EU: %s
 nei.extras.time=Time: %s seconds
 nei.extras.eut=Requires: %s EU/t
 
-gregtechmod.log_in.text_1=GregTech is known for massivly changing the Tech Tree of modded Minecraft. Please make sure to look up Recipes via NEI (you will definetly need NEI), before complaining about missing Recipes. 
-gregtechmod.log_in.text_2=We proviede approved port of GregTech 4, so I hope you enjoy it! In case of bugs were found, please report it!
+gregtechmod.log_in.text_1=GregTech is known for massively changing the Tech Tree of modded Minecraft. Please make sure to look up Recipes via NEI (you will definitely need NEI), before complaining about missing Recipes. 
+gregtechmod.log_in.text_2=We provide this approved port of GregTech 4, so I hope you enjoy it! In case of bugs were found, please report it!
 
 fluid.heliumplasma=Helium Plasma
 fluid.hydrogen=Hydrogen
