Olivine -> Peridot lang conversion

--- a/src/main/resources/assets/gregtech_addon/lang/en_US.lang
+++ b/src/main/resources/assets/gregtech_addon/lang/en_US.lang
@@ -24,7 +24,7 @@ tile.BlockMetaID_Ore.Cinnabar_Ore.name=Cinnabar Ore
 tile.BlockMetaID_Ore.Sphalerite_Ore.name=Sphalerite Ore
 tile.BlockMetaID_Ore.Tungstate_Ore.name=Tungstate Ore
 tile.BlockMetaID_Ore.Cooperite_Ore.name=Sheldonite Ore
-tile.BlockMetaID_Ore.Olivine_Ore.name=Olivine Ore
+tile.BlockMetaID_Ore.Olivine_Ore.name=Peridot Ore
 tile.BlockMetaID_Ore.Sodalite_Ore.name=Sodalite Ore
 tile.BlockMetaID_Ore.Tetrahedrite_Ore.name=Tetrahedrite Ore
 tile.BlockMetaID_Ore.Cassiterite_Ore.name=Cassiterite Ore
@@ -32,7 +32,7 @@ tile.BlockMetaID_Ore.Nickel_Ore.name=Nickel Ore
 tile.BlockMetaID_Block2.GT_LeadBlock.name=Block of Lead
 tile.BlockMetaID_Block2.GT_ElectrumBlock.name=Block of Electrum
 tile.BlockMetaID_Block2.GT_ZincBlock.name=Block of Zinc
-tile.BlockMetaID_Block2.GT_OlivineBlock.name=Block of Olivine
+tile.BlockMetaID_Block2.GT_OlivineBlock.name=Block of Peridot
 tile.BlockMetaID_Block2.GT_GreenSapphireBlock.name=Block of Green Sapphire
 tile.BlockMetaID_Block2.GT_CooperiteBlock.name=Block of Cooperite
 tile.BlockMetaID_Block2.GT_TungstenBlock.name=Block of Tungsten
@@ -1514,7 +1514,7 @@ materials.YellowLimonite=Yellow Limonite
 materials.Perlite=Perlite
 materials.Borax=Borax
 materials.Lignite=Lignite Coal
-materials.Olivine=Olivine
+materials.Olivine=Peridot
 materials.Opal=Opal
 materials.Amethyst=Amethyst
 materials.Redstone=Redstone
