revert the removal of platinum and bump version

--- a/src/main/resources/assets/gregtech_addon/lang/en_US.lang
+++ b/src/main/resources/assets/gregtech_addon/lang/en_US.lang
@@ -34,7 +34,7 @@ tile.BlockMetaID_Block2.GT_ElectrumBlock.name=Block of Electrum
 tile.BlockMetaID_Block2.GT_ZincBlock.name=Block of Zinc
 tile.BlockMetaID_Block2.GT_OlivineBlock.name=Block of Peridot
 tile.BlockMetaID_Block2.GT_GreenSapphireBlock.name=Block of Green Sapphire
-tile.BlockMetaID_Block2.GT_CooperiteBlock.name=Block of Cooperite
+tile.BlockMetaID_Block2.GT_PlatinumBlock.name=Block of Platinum
 tile.BlockMetaID_Block2.GT_TungstenBlock.name=Block of Tungsten
 tile.BlockMetaID_Block2.GT_NickelBlock.name=Block of Nickel
 tile.BlockMetaID_Block2.GT_TungstenSteelWall.name=Tungstensteel Block
@@ -335,10 +335,10 @@ metatileentity.GT_Pipe_StainlessSteel_Large.name=Large Stainless Steel Fluid Pip
 metatileentity.GT_Pipe_TungstenSteel_Large.name=Large Tungstensteel Fluid Pipe
 metatileentity.GT_Pipe_Brass.name=Brass Item Pipe
 metatileentity.GT_Pipe_Electrum.name=Electrum Item Pipe
-metatileentity.GT_Pipe_Cooperite.name=Cooperite Item Pipe
+metatileentity.GT_Pipe_Platinum.name=Platinum Item Pipe
 metatileentity.GT_Pipe_Brass_Large.name=Large Brass Item Pipe
 metatileentity.GT_Pipe_Electrum_Large.name=Large Electrum Item Pipe
-metatileentity.GT_Pipe_Cooperite_Large.name=Large Cooperite Item Pipe
+metatileentity.GT_Pipe_Platinum_Large.name=Large Platinum Item Pipe
 metatileentity.GT_Frame_Iron.name=Iron Frame
 metatileentity.GT_Frame_Aluminium.name=Aluminium Frame
 metatileentity.GT_Frame_Steel.name=Steel Frame
@@ -733,8 +733,8 @@ item.silver_credit.name=Silver Credit
 item.silver_credit.tooltip=8 Credits
 item.gold_credit.name=Gold Credit
 item.gold_credit.tooltip=64 Credits
-item.cooperite_credit.name=Cooperite Credit
-item.cooperite_credit.tooltip=512 Credits
+item.platinum_credit.name=Platinum Credit
+item.platinum_credit.tooltip=512 Credits
 item.osmium_credit.name=Osmium Credit
 item.osmium_credit.tooltip=4096 Credits
 
@@ -857,7 +857,7 @@ item.GT_Lava_Filter.name=Lava Filter
 item.GT_Lava_Filter.tooltip_main=Filters Lava in Thermal Boilers
 item.GT_Materials.0.name=Copper Credit
 item.GT_Materials.1.name=Silver Credit
-item.GT_Materials.3.name=Cooperite Credit
+item.GT_Materials.3.name=Platinum Credit
 item.GT_Materials.12.name=Osmium Credit
 item.GT_Materials.4.name=Iridium Alloy Ingot
 item.GT_Materials.14.name=Flour
